--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <div class="row">
       <div class="col-lg-6 hidden-xs hidden-sm">Logo</div>
       <div class="col-lg-6 col-xs-12">
-        <div class="app">
+          <div class="app" id="app">
+          </div>
+        <!-- <div class="app" id="app">
           <div class="container-fluid wizard w-1 active">
             <div class="row actions action-top"> 
               <div class="col-md-12">
@@ -69,7 +71,7 @@
           <div class="wizard w-2">
             step 2
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
 
@@ -86,6 +88,7 @@
   <!-- <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script> -->
 
   <script src="js/data.js"></script>
+  <script src="js/form.js"></script>
   <script src="js/main.js"></script>
 </body>
 
