--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
   <!-- <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script> -->
 
   <script src="js/data.js"></script>
+  <script src="js/components.js"></script>
   <script src="js/form.js"></script>
   <script src="js/main.js"></script>
 </body>
