--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="author" content="">
   <link rel="icon" href="../../favicon.ico">
 
-  <title>Starter Template for Bootstrap</title>
+  <title>Dynamic Form</title>
 
   <!-- Bootstrap core CSS -->
   <link href="css/normalize.min.css" rel="stylesheet">
