--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
   <!-- Bootstrap core CSS -->
   <link href="css/normalize.min.css" rel="stylesheet">
-  
   <link href="css/bootstrap.min.css" rel="stylesheet">
-
+  <link href="css/bootstrap-datepicker.min.css" rel="stylesheet">
+  
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
   <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
@@ -86,6 +86,9 @@
   <!-- <script src="js/bootstrap.min.js"></script> -->
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <!-- <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script> -->
+
+  <script src="js/bootstrap-datepicker.min.js"></script>
+  
 
   <script src="js/data.js"></script>
   <script src="js/components.js"></script>
