font awsome and wizard file

--- a/index.html
+++ b/index.html
@@ -8,20 +8,19 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" href="../../favicon.ico">
-
+  <!-- <link rel="icon" href="../../favicon.ico"> -->
+  
+  
   <title>Dynamic Form</title>
 
   <!-- Bootstrap core CSS -->
   <link href="css/normalize.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/bootstrap-datepicker.min.css" rel="stylesheet">
+  <link href="css/font-awesome.min.css" rel="stylesheet">
   
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-  <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-  <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-  <!-- <script src="../../assets/js/ie-emulation-modes-warning.js"></script> -->
   <link href="css/main.css" rel="stylesheet">
 </head>
 
@@ -33,65 +32,19 @@
       <div class="col-lg-6 col-xs-12">
           <div class="app" id="app">
           </div>
-        <!-- <div class="app" id="app">
-          <div class="container-fluid wizard w-1 active">
-            <div class="row actions action-top"> 
-              <div class="col-md-12">
-                  <input type="button" name="" class="btn btn-primary form-control" id="" value="Back"> 
-              </div>
-            </div>
-            <form class="">
-              
-              <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-              </div>
-              <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-              </div>
-              <div class="form-group">
-                <label for="exampleInputFile">File input</label>
-                <input type="file" id="exampleInputFile">
-                <p class="help-block">Example block-level help text here.</p>
-              </div>
-              <div class="checkbox">
-                <label>
-                  <input type="checkbox"> Check me out
-                </label>
-              </div>
-              <button type="submit" class="btn btn-default">Submit</button>
-            </form>
-            <div class="row actions action-bottom"> 
-              <div class="col-md-12">
-                  <input type="button" name="" class="btn btn-primary form-control" id="" value="Next">                   
-              </div>
-            </div>
-          </div>
-          <div class="wizard w-2">
-            step 2
-          </div>
-        </div> -->
+       
       </div>
     </div>
 
   </div>
-  <!-- /.container -->
-
-
-  <!-- Bootstrap core JavaScript
-    ================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
+ 
   <script src="js/jquery.min.js"></script>
-  <!-- <script src="js/bootstrap.min.js"></script> -->
-  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <!-- <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script> -->
-
   <script src="js/bootstrap-datepicker.min.js"></script>
-  
-
   <script src="js/data.js"></script>
   <script src="js/components.js"></script>
+  <script src="js/WizardManager.js"></script>
+  <script src="js/Wizard.js"></script>
+  
   <script src="js/form.js"></script>
   <script src="js/main.js"></script>
 </body>
